data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4621.wast
;; 10. **Test Description**: Provide a `br_table` instruction with mixed valid and invalid target functions, ensuring that the correct traps occur only when accessing invalid entries. The test checks selective index validation.     - **Constraint**: Alternate between valid and invalid function entries in the table.     - **Edge Case Relation**: Ensures selective validation and trapping based on the accessed target's validity.

(assert_invalid
  (module
    (func $valid_func (param i32) (result i32)
      (local.get 0)
    )
    (type $valid_sig (func (param i32) (result i32)))
    (table 2 funcref 
      (elem $valid_func (ref.null func))
    )
    (func $test_func
      (call_indirect (type $valid_sig) (i32.const 0) (i32.const 1)) 
      (call_indirect (type $valid_sig) (i32.const 1) (i32.const 1))
    )
  )
  "index out of bounds"
)